# c4-model-service

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml
c4service/: __init__.py  model.py  service.py  utils.py  view.py
c4service/preprocess/: py_lang.py
requirements/: base.txt  cpu.txt  dev.txt  gpu.txt
